@@ -24,6 +24,15 @@ Bugs fixed
 Other changes
 -------------
 
+* lxml now raises a TagNameWarning about tag names containing ':' instead of
+  an Error as 1.3.3 did.  The reason is that a number of projects currently
+  misuse the previous lack of tag name validation to generate namespace
+  prefixes without declaring namespaces.  Apart from the danger of generating
+  broken XML this way, it also breaks most of the namespace-aware tools in
+  XML, including XPath, XSLT and validation.  lxml 1.3.x will continue to
+  support this bug with a Warning, while lxml 2.0 will be strict about
+  well-formed tag names (not only regarding ':').
+
 * Serialising an Element no longer includes its comment and PI siblings (only
   ElementTree serialisation includes them).
 
